Add the beginnings of an FAQ.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,11 @@
 		<link rel="stylesheet" href="tufte.css"/>
 	</head>
 	<body>
-		{{ content }}
+		<article>
+			<section>
+				{{ content }}
+			</section>
+		</article>
 	</body>
 </html>
 
